# gazelle_envoy_bug

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
