load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix example
# gazelle:proto disable_global
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "example",
    visibility = ["//visibility:private"],
    deps = ["@com_github_envoyproxy_go_control_plane//envoy/service/auth/v2:go_default_library"],
)

go_binary(
    name = "example",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
